# morning-market-monitor

./: .env.example  .gitignore  DEPLOY-LOCAL.md  DEPLOY.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: morning.yml  sharadar-test.yml
data/: 2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  index.json
data/breadth/: breadth_200dma.csv  breadth_50dma.csv  breadth_broad_200dma.csv  breadth_broad_50dma.csv  breadth_nhnl_52w.csv
data/universe/: sp500.csv
deploy/: com.morningmonitor.daily.plist
morning_monitor/: __init__.py  brief.py  config.py  main.py  models.py  render.py
morning_monitor/anomaly/: __init__.py  correlation.py  engine.py  fdr.py  stats.py  transforms.py
morning_monitor/sources/: __init__.py  _retry.py  breadth.py  calendar.py  composites.py  crypto.py  databank.py  derived.py  fred.py  ingest.py  market.py  nyfed.py
morning_monitor/templates/: archive_index.html  base.html  day.html
schema/: brief.schema.json
scripts/: compute.command
specs/: SPEC-1-tv-pine.md  SPEC-2-backend-snapshot.md  SPEC-3-cloud-breadth-fred-calendar.md
tests/: conftest.py  test_anomaly.py  test_breadth.py  test_calendar_fred.py  test_contract.py  test_databank.py  test_hardening.py  test_pipeline.py  test_retry.py  test_schema_validation.py
tests/fixtures/: sample_run.json
