[project]
name = "morning-market-monitor"
version = "0.1.0"
description = "SPEC-2 backend — once-a-morning cross-asset market monitor (snapshot, free EOD data)."
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "httpx>=0.27",
  "yfinance>=0.2.40",
  "jinja2>=3.1",
  "PyYAML>=6.0",
  "duckdb>=1.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "jsonschema>=4.21"]

[project.scripts]
morning-monitor = "morning_monitor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["morning_monitor", "morning_monitor.sources", "morning_monitor.anomaly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
# Point the type-checker at the project venv so third-party deps (jinja2,
# yfinance, markupsafe, ...) resolve instead of reporting reportMissingImports.
venvPath = "."
venv = ".venv"
extraPaths = ["."]
